<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_titulo_add_aeropuerto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_codigo_iata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_hint_codigo_iata"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/et_nombre_aeropuerto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_hint_nombre_aeropuerto"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/et_ciudad_aeropuerto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_hint_ciudad"
        android:inputType="textCapWords" />
</LinearLayout>
